<resources>
    <string name="app_name">GPA Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="add_a_semester">Add A Semester</string>
    <string name="add_a_course">Add A Course</string>
    <string name="cumulative_gpa">Cumulative GPA: N/A</string>
    <string name="semester_gpa">Semester GPA: N/A</string>

    <string name="title_activity_course_list">CourseListActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_grade_scale">Edit Grade Scale</string>

    <string name="pref_header_calculations">Calculations</string>

    <string name="key_decimal_places">key_decimal_places</string>
    <string name="title_decimal_places">Decimal Places</string>
    <string name="summary_decimal_places">Current: 2</string>

    <string name="key_edit_grade_scale">key_edit_grade_scale</string>
    <string name="title_edit_grade_scale">Edit Grade Scale</string>

    <string name="pref_header_about">About</string>
    <string name="title_add_edit_course">Course Activity</string>

</resources>
